welcome page layout

--- a/app/views/static_pages/IDMTOOLS.html.erb
+++ b/app/views/static_pages/IDMTOOLS.html.erb
@@ -8,5 +8,5 @@
 <p>&nbsp; &nbsp; &nbsp; &nbsp; /net/slc03nui/scratch/haisyu/scripts/perl_curl_dif_fromDTE.pl</p>
 <br />
 <br />
-<a href="https://list-jason-yu-1.c9.io/">BACK</a>
+<a href="https://myapp-jason-yu.c9.io/">BACK</a>
 </body>
