--- a/app/views/static_pages/TOPOLOGIES.html.erb
+++ b/app/views/static_pages/TOPOLOGIES.html.erb
@@ -5,5 +5,5 @@
 <p>HA topologies, see details in wiki: <a href="http://aseng-wiki.us.oracle.com/asengwiki/pages/viewpage.action?pageId=5193746642">http://aseng-wiki.us.oracle.com/asengwiki/pages/viewpage.action?pageId=5193746642</a></p>
 <br />
 <br />
-<a href="https://list-jason-yu-1.c9.io/">BACK</a>
+<a href="https://myapp-jason-yu.c9.io/">BACK</a>
 </body>
