--- a/app/views/static_pages/UI.html.erb
+++ b/app/views/static_pages/UI.html.erb
@@ -4,5 +4,5 @@
 <p>UI testing cases<br />&nbsp; &nbsp; &nbsp;cases be stored in fmwtest_main_generic<br />&nbsp; &nbsp; &nbsp;about how to run it: <a href="http://aseng-wiki.us.oracle.com/asengwiki/pages/viewpage.action?pageId=5195825992">http://aseng-wiki.us.oracle.com/asengwiki/pages/viewpage.action?pageId=5195825992</a></p>
 <br />
 <br />
-<a href="https://list-jason-yu-1.c9.io/">BACK</a>
+<a href="https://myapp-jason-yu.c9.io/">BACK</a>
 </body>
