--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,20 +1,9 @@
 
 <% provide(:title, "HOME") %>
-<h1>List</h1>
-<body>
-    <div id="page">
-      <div id="center">
-        <ul id="center-items">
-          <li>
-            <h3>Browse the details</h3>
-            <ul class="links">
-              <li><a href="static_pages/UI">UI</a></li>
-              <li><a href="static_pages/TOPOLOGIES">TOPOLOGIES</a></li>
-              <li><a href="static_pages/BP">BP</a></li>
-              <li><a href="static_pages/IDMTOOLS">IDMTOOLS</a></li>
-              <li><a href="https://jason-demo-jason-yu.c9.io/microposts">Jason's microposts</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-<body>
+<div class="center jumbotron">
+	<h1>Welcome to Jason's app</h1>
+
+	<h2>This is a welcome page, you need to login firstly</h2>
+
+	<%= link_to "sign up now", "#", class: "btn btn-lg btn-primary" %>
+</div>
